# object_detection

./: CMakeLists.txt  build.sh  glad.c  opengl.cpp  window.cpp
